feat: add zoom + api

--- a/apps/out-school/src/app/app.component.html
+++ b/apps/out-school/src/app/app.component.html
@@ -1,3 +1,6 @@
-<button class="login" (click)="login()">Login</button>
+<button class="login ring-2 hover:ring-4 rounded-sm mx-8" (click)="login()">
+  Login
+</button>
 
-<stack-nx-welcome></stack-nx-welcome>
+<stack-zoom></stack-zoom>
+  
