--- a/apps/out-school/src/app/app.component.html
+++ b/apps/out-school/src/app/app.component.html
@@ -1,3 +1,6 @@
-<button class="login" (click)="login()">Login</button>
-
-<stack-nx-welcome></stack-nx-welcome>
+<main class="flex flex-col text-slate-500">
+  <div class="color-line"></div>
+  <stack-header></stack-header>
+  <stack-main-container></stack-main-container>
+  <stack-footer></stack-footer>
+</main>
