--- a/apps/out-school/src/styles.scss
+++ b/apps/out-school/src/styles.scss
@@ -12,3 +12,8 @@ body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+
+
+::placeholder{
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
