--- a/libs/auth/src/lib/signup/sign-up.container/sign-up.container.component.html
+++ b/libs/auth/src/lib/signup/sign-up.container/sign-up.container.component.html
@@ -21,6 +21,10 @@
       Sign up <mat-icon>person_add</mat-icon>
     </button>
 
-    <a class="flex items-center justify-center p-4 cursor-pointer"   (click)="form.reset()">Reset</a>
+    <a
+      class="flex items-center justify-center p-4 cursor-pointer"
+      (click)="form.reset()"
+      >Reset</a
+    >
   </form>
 </div>
