--- a/libs/shared/components/src/lib/main-container/main-container.component.html
+++ b/libs/shared/components/src/lib/main-container/main-container.component.html
@@ -12,6 +12,11 @@
   <mat-sidenav class="w-48" [opened]="false" mode="side" position="end"
     >End content</mat-sidenav
   >
-  <a mat-raised-button  class="bg-gradient-to-r from-cyan-500 to-blue-500 text-white h-10 flex items-center justify-center" routerLink="signup">Register</a>
+  <a
+    mat-raised-button
+    class="bg-gradient-to-r from-cyan-500 to-blue-500 text-white h-10 flex items-center justify-center"
+    routerLink="signup"
+    >Register</a
+  >
   <router-outlet></router-outlet>
 </mat-sidenav-container>
