--- a/apps/out-school/src/app/app.component.scss
+++ b/apps/out-school/src/app/app.component.scss
@@ -1,19 +1,37 @@
 main {
   padding: 0;
   background: #f1f3f6;
-  transition: margin .4s ease 0s;
+  transition: margin 0.4s ease 0s;
   position: relative;
   min-height: 100%;
   .color-line {
-      background: #f7f9fa;
-      height: 6px;
-      background-image: linear-gradient(to right, #34495e, #34495e 25%, #9b59b6 25%, #9b59b6 35%, #3498db 35%, #3498db 45%, #62cb31 45%, #62cb31 55%, #ffb606 55%, #ffb606 65%, #e67e22 65%, #e67e22 75%, #e74c3c 85%, #e74c3c 85%, #c0392b 85%, #c0392b 100%);
-      background-size: 100% 6px;
-      background-position: 50% 100%;
-      background-repeat: no-repeat;
-    }
+    background: #f7f9fa;
+    height: 6px;
+    background-image: linear-gradient(
+      to right,
+      #34495e,
+      #34495e 25%,
+      #9b59b6 25%,
+      #9b59b6 35%,
+      #3498db 35%,
+      #3498db 45%,
+      #62cb31 45%,
+      #62cb31 55%,
+      #ffb606 55%,
+      #ffb606 65%,
+      #e67e22 65%,
+      #e67e22 75%,
+      #e74c3c 85%,
+      #e74c3c 85%,
+      #c0392b 85%,
+      #c0392b 100%
+    );
+    background-size: 100% 6px;
+    background-position: 50% 100%;
+    background-repeat: no-repeat;
+  }
 
-    .content__wrapper{
-      @apply flex-1 p-8 flex items-center justify-center;
-    }
+  .content__wrapper {
+    @apply flex-1 p-8 flex items-center justify-center;
+  }
 }
