feat: upgrade to angular 16

--- a/libs/shared/ui-kit/src/validator/validator.component.html
+++ b/libs/shared/ui-kit/src/validator/validator.component.html
@@ -10,7 +10,7 @@
     [class.invalid]="!valid && !dirty"
   >
     <mat-icon class="mr-2">done_all</mat-icon>
-    {{ validation?.heading }}
+    {{ validation.heading }}
   </header>
   <div class="validator__content p-3">
     <section
